--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,182 @@
-// app global css in SCSS form
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Medium.ttf")
+    format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Heavy.ttf")
+    format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-UltralightItalic.ttf")
+    format("truetype");
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-RegularItalic.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Thin.ttf")
+    format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Light.ttf")
+    format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-BlackItalic.ttf")
+    format("truetype");
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Bold.ttf")
+    format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Black.ttf")
+    format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-SemiboldItalic.ttf")
+    format("truetype");
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Ultralight.ttf")
+    format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-LightItalic.ttf")
+    format("truetype");
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-ThinItalic.ttf")
+    format("truetype");
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-MediumItalic.ttf")
+    format("truetype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Semibold.ttf")
+    format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-HeavyItalic.ttf")
+    format("truetype");
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-Regular.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("../../public/fonts/sf-pro-display/SFProDisplay-BoldItalic.ttf")
+    format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+// -------------------------------------------------------------------------------------------
+
+body {
+  // font-family: "SF Pro Display", sans-serif !important;
+  font-family: "Roboto";
+}
+
+input {
+  all: unset;
+  background-color: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  color: $text-color;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19.09px;
+
+  &.hint {
+    color: $text-hint-color;
+  }
+}
