--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,27 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+// $primary   : #1976D2;
+// $secondary : #26A69A;
+// $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+// $dark      : #1D1D1D;
+// $dark-page : #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+// $positive  : #21BA45;
+// $negative  : #C10015;
+// $info      : #31CCEC;
+// $warning   : #F2C037;
+
+// buttons variables
+$button_color: #50a8eb;
+$button_main_disabled_color: #e9e8e8;
+$button_text_color: #fff;
+$second_button_color: #50a8eb1a;
+$text_main_disabled_color: #bababa;
+
+// text variables
+
+$accent_text_color: #1c93e3;
+$text-color: rgba(34, 34, 34, 1);
+$text-hint-color: rgba(168, 168, 168, 1);
